# modu-core

./: .clang-format  .clang-tidy  .gitignore  .llmignore  CMakeLists.txt  CODEOWNERS  LICENSE  README-clang-tidy.md  README.md  VERSION  config.toml.example
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: CONTRIBUTING.md  pull_request_template.md  release.yml
.github/workflows/: build-and-test.yml  create-release-branch.yml  dev-tag.yml  docker-build.yml  hotfix.yml  release.yml  static-analysis.yml
.llm/: ATTRIBUTION.md  ai-quick-reference.md  architecture.md  coding-standards.md  context.md  instructions.md
L0_AcceptanceTests/test_bdd_cucumber/: CMakeLists.txt  QUICKSTART.md  README.md  custom_config.toml  run_tests.sh  test_bdd_cucumber-config.cmake  test_config.toml
L0_AcceptanceTests/test_bdd_cucumber/features/: application_startup.feature  config_reload.feature
L0_AcceptanceTests/test_bdd_cucumber/features/support/: cucumber.wire  env.rb
L0_AcceptanceTests/test_bdd_cucumber/src/: cucumber_hooks.cpp  test_fixture.cpp  test_hooks.cpp
L0_AcceptanceTests/test_bdd_cucumber/step_definitions/: config_steps.cpp  startup_steps.cpp  terminate_steps.cpp
L0_AcceptanceTests/test_pytest/: README.md  conftest.py  pytest.ini  requirements.txt
L0_AcceptanceTests/test_pytest/application_lifecycle/: test_startup_shutdown.py
L0_AcceptanceTests/test_pytest/application_lifecycle/features/: startup_shutdown.feature
L0_AcceptanceTests/test_pytest/configuration/: test_config_reload.py
L0_AcceptanceTests/test_pytest/configuration/features/: config_reload.feature
L0_AcceptanceTests/test_pytest/helpers/: __init__.py  log_watcher.py
L4_Infrastructure/infr_main/: CMakeLists.txt  infr_main-config.cmake
L4_Infrastructure/infr_main/interface/: infr_main.h
L4_Infrastructure/infr_main/src/: infr_config.cpp  infr_config.h  infr_main.cpp
L5_Common/comm_config/: CMakeLists.txt  README.md  comm_config-config.cmake
L5_Common/comm_config-toml/: CMakeLists.txt  README.md  comm_config-toml-config.cmake
L5_Common/comm_config-toml/integration_test/: CMakeLists.txt  test_reload.cpp
L5_Common/comm_config-toml/interface/: comm_config_client.h  comm_config_core.h  comm_config_toml.h
L5_Common/comm_config-toml/src/: comm_config_toml.cpp
L5_Common/comm_config-toml/unit_test/: CMakeLists.txt  comm_config_toml_test.cpp
L5_Common/comm_config/interface/: comm_config.h
L5_Common/comm_config/src/: comm_config.cpp
L5_Common/comm_config/unit_test/: CMakeLists.txt  comm_config_test.cpp
L5_Common/comm_main/: CMakeLists.txt  comm_main-config.cmake
L5_Common/comm_main/interface/: comm_main.h
L5_Common/comm_main/src/: comm_main.cpp
L5_Common/comm_os/: comm_os-config.cmake
L5_Common/comm_os/interface/: comm_os.h
L5_Common/comm_os/src/: comm_os.cpp
L5_Common/comm_os/unit_test/: comm_os_test.cpp
L5_Common/comm_terminate/: CMakeLists.txt  README.md  comm_terminate-config.cmake
L5_Common/comm_terminate/integration_test/: CMakeLists.txt  README.md  README_DOUBLE_SIGINT.md  run_test.sh  run_test_double_sigint.sh  test_double_sigint.cpp  test_sighup.cpp
L5_Common/comm_terminate/interface/: comm_terminate.h
L5_Common/comm_terminate/src/: comm_terminate.cpp
L5_Common/comm_terminate/unit_test/: CMakeLists.txt  comm_terminate_test.cpp
acceptance_test/: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  run_tests.sh.in
acceptance_test/features/: graceful_shutdown.feature
acceptance_test/step_definitions/: config_steps.cpp  startup_steps.cpp  terminate_steps.cpp
acceptance_test/support/: cucumber_hooks.cpp  test_fixture.cpp  test_fixture.h  test_hooks.h
acceptance_test/test_configs/: default.toml
docs/: BRANCH_PROTECTION.md  MODULE_TEMPLATE.md  RELEASE_PROCESS.md  SIGHUP_CONFIG_RELOAD.md  config_example.cpp
docs/presentation/: Release_Process_Presentation.md
main/: CMakeLists.txt  config.h.in  main.cpp
scripts/: run-clang-tidy.sh
